Notable improvement to magic scrolling. Now smoothly slides to align diffs. Still has some issues. For example jumpy for adds.

--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ body {
 .file .file-contents {
   position: relative;
   color: #fff;
-  /*-webkit-transition: top 0.5s;*/
 }
 .file .file-contents pre {
   margin: 0;
@@ -50,7 +49,6 @@ body {
 .gutter svg {
   position: absolute;
   width: 100%;
-  /*-webkit-transition: top 0.5s;*/
 }
 .gutter .delete {
   fill: rgba(255, 96, 96, .25);
@@ -62,6 +60,18 @@ body {
   fill: rgba(96, 96, 255, .25);
 }
 
-.focal-line {
+/*.focal-line {
   background-color: rgba(255,255,255, .5) !important;
 }
+.prev-change {
+  background-color: rgba(0,0,255, .5) !important;
+}
+.next-change {
+  background-color: rgba(255,0,0, .5) !important;
+}
+.focal-point {
+  position: absolute;
+  border-top: 1px solid #fff;
+  width: 100%;
+  z-index:10;
+}*/
